--- a/doc/bibliography/bibliography.bib
+++ b/doc/bibliography/bibliography.bib
@@ -126,10 +126,10 @@
     year={2013},
     pages={1730--1735}
 }
-@article{Gavin16,
+@mastersthesis{Gavin16,
     author={Gavin, Henri P.},
     title={The Levenberg-Marquardt method for nonlinear least squares curve-fitting problems},
-    journal={Department of Civil and Environmental Engineering, Duke University},
+    school={Department of Civil and Environmental Engineering, Duke University},
     year={2016}
 }
 @article{Shata05,
