--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -22,6 +22,7 @@
 \usepackage{algorithmic}
 \usepackage{float}
 \usepackage{comment}
+\usepackage{lscape}
 
 \usepackage{tikz}
 \usetikzlibrary{babel,arrows.meta,shapes,arrows}
